fix: safari bug not fixed but at least ui is visible

--- a/src/style/component.css
+++ b/src/style/component.css
@@ -7,9 +7,14 @@
 }
 
 dialog[open] {
-  max-height: 100%;
-  min-height: 50%;
+  /* max-height: 100%;
+  min-height: 50%; */
+  /* height: 100%; */
+  /* min-height: 50%; */
+  max-height: 80%;
 }
+
+
 
 /* 
     https://unpkg.com/open-props@1.7.6/open-props.min.css for some cool animation variables
@@ -22,10 +27,7 @@ dialog[open] {
   margin: auto;
   background-color: var(--bg-color);
   width: 100%;
-
-  @media (max-width: 600px) {
-    min-width: 100%;
-  }
+  height: 100%;
 }
 
 
@@ -36,6 +38,7 @@ dialog[open] {
   gap: 1rem;
   padding: 2rem 5rem;
   width: 100%;
+
 
   @media (max-width: 600px) {
     padding: 1rem 2rem;
